# SponsorBlockTV-Web

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build_docker_images.yml  release.yml  update_docker_readme.yml
src/backend/: main.py  run_container.py
src/backend/sponsorblocktv_web/: api_app.py  api_helpers.py  config_setup.py  constants.py  device_overrides.py  helpers.py  main.py  stats.py  ytlounge.py
src/frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/frontend/src/: index.css  main.tsx  router.tsx
src/frontend/src/api/: client.ts  hooks.ts  types.ts
src/frontend/src/auth/: AuthProvider.tsx  RequireAuth.tsx
src/frontend/src/components/: Modal.tsx
src/frontend/src/i18n/: LanguageSwitcher.tsx  index.tsx
src/frontend/src/i18n/locales/: en.ts  ru.ts
src/frontend/src/layout/: AppLayout.tsx
src/frontend/src/pages/: ChannelsPage.tsx  ConfigPage.tsx  DevicesPage.tsx  LoginPage.tsx  StatsPage.tsx
