[project]
name = "sponsorblocktv-web"
version = "1.0.0"
authors = [
    {"name" = "dmunozv04"},
    {"name" = "nikovonlas"}
]
description = "SponsorBlock Web client for all YouTube TV apps"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Home Automation"
]
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
packages = [
    { include = "sponsorblocktv_web", from = "src/backend" },
]

[tool.hatch.build.targets.sdist]
include = [
    "src/backend/sponsorblocktv_web",
    "src/backend/main.py",
    "src/backend/run_container.py",
]

[project.urls]
"Homepage" = "https://github.com/dmunozv04/SponsorBlockTV-Web"
"Bug Tracker" = "https://github.com/dmunozv04/SponsorBlockTV-Web/issues"

[project.scripts]
"sponsorblocktv-web" = "sponsorblocktv_web.__main__:main"

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
